# astara-appliance

./: .gitignore  .gitreview  .travis.yml  MANIFEST.in  Makefile  Makefile.deprecated  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_requirements.txt  tox.ini
.tox/py26/: .tox-config1
akanda/: __init__.py
akanda/router/: debug.py  defaults.py  manager.py  metadata_proxy.py  models.py  settings.py  utils.py
akanda/router/api/: server.py
akanda/router/api/v1/: __init__.py  base.py  firewall.py  status.py  system.py
akanda/router/commands/: management.py
akanda/router/drivers/: arp.py  base.py  bird.py  dnsmasq.py  hostname.py  ifconfig.py  ip.py  iptables.py  metadata.py  pf.py  ping.py  route.py
akanda/router/drivers/loadbalancer/: __init__.py  nginx.py
ansible/: inventory  main.yml
ansible/tasks/: akanda.yml  astara.yml  base.yml  bird.yml  conntrackd.yml  debian_backports.yml  dnsmasq.yml  extras.yml  strongswan.yml  update_kernel.yml
ansible/templates/: default_grub  dnsmasq.conf.j2  gunicorn  gunicorn.j2  logrotate.j2  motd.j2  rules_v4.j2  rules_v6.j2
astara_router/: config.py  debug.py  defaults.py  manager.py  metadata_proxy.py  models.py  settings.py  utils.py  version.py
astara_router/api/: server.py
astara_router/api/v1/: base.py  firewall.py  status.py  system.py
astara_router/commands/: management.py
astara_router/drivers/: arp.py  base.py  bird.py  conntrackd.conf.template  conntrackd.py  dnsmasq.py  hostname.py  ip.py  iptables.py  keepalived.conf.template  keepalived.py  metadata.py  ping.py
astara_router/drivers/loadbalancer/: __init__.py  nginx.conf.template  nginx.py
astara_router/drivers/vpn/: ipsec.py
astara_router/drivers/vpn/templates/: README  ipsec.conf.j2  ipsec.secrets.j2
astara_router/test/unit/: fakes.py  test_metadata_proxy.py  test_models.py
astara_router/test/unit/drivers/: test_bird.py  test_dnsmasq.py  test_hostname.py  test_metadata.py  test_route.py
diskimage-builder/: README.md
diskimage-builder/elements/: akanda
diskimage-builder/elements/akanda/: README.rst  element-deps  source-repository-akanda
diskimage-builder/elements/akanda/environment.d/: 10-cloudinit-akanda
diskimage-builder/elements/akanda/post-install.d/: 90-fix-locale
diskimage-builder/elements/ansible/: README.md
diskimage-builder/elements/astara/: README.rst  source-repository-astara
diskimage-builder/elements/debug-user/: README.md  package-installs.yaml
diskimage-builder/elements/nginx/: README.rst  element-deps
diskimage-builder/elements/nginx-plus/: README.rst  element-deps
diskimage-builder/elements/pip-and-virtualenv/: README.md
etc/: rootwrap.conf
etc/rootwrap.d/: network.filters
releasenotes/notes/: conntrackd-c179372033f4134e.yaml  ensure_interface_cache_refreshed-57ce5b0637282b60.yaml  initial-note-fd05752e5f3b87fb.yaml  keepalived_manager-4ed9f900f3d3429b.yaml
releasenotes/source/: conf.py  index.rst  mitaka.rst
scripts/: build_dib_appliance.sh  create-akanda-livecd.sh  create-akanda-raw-image.sh  debug-config.py  get-version.py  rabbit.py
scripts/etc/: group  key  master.passwd  newsyslog.conf  passwd  rc.local
scripts/etc/init.d/: akanda-router-api-server  astara-router-api-server  bird6  metadata  ssh
scripts/etc/rc.d/: bird  dnsmasq  metadata  sshd
test/unit/: fakes.py  test_metadata_proxy.py  test_models.py  test_utils.py
test/unit/drivers/: test_arp.py  test_bird.py  test_conntrackd.py  test_dnsmasq.py  test_hostname.py  test_ifconfig.py  test_ifconfig_driver.py  test_ip.py  test_iptables.py  test_keepalived.py  test_pf.py  test_route.py  test_strongswan.py
(+21 files in other folders)
