[metadata]
name = akanda-appliance
version = 2015.1
summary = Akanda Linux-based L3 software router
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://github.com/stackforge/akanda-rug
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[nosetests]
where = test
verbosity = 2
detailed-errors = 1
cover-package = akanda
