[metadata]
name = astara-appliance
summary = Astara Linux-based network function appliance
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://github.com/openstack/akanda-appliance
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    akanda
    akanda.router
namespace_packages =
    akanda

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    akanda-configure-management=akanda.router.commands.management:configure_management
    akanda-api-dev-server=akanda.router.api.server:main
    akanda-metadata-proxy=akanda.router.metadata_proxy:main
    akanda-gratuitous-arp=akanda.router.drivers.arp:send_gratuitous_arp

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
where = test
verbosity = 2
detailed-errors = 1
cover-package = akanda
