[metadata]
name = astara-appliance
version = 8.0.0
summary = Astara Linux-based network function appliance
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://github.com/openstack/astara-appliance
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    astara_router

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    akanda-configure-management=astara_router.commands.management:configure_management
    akanda-api-dev-server=astara_router.api.server:main
    akanda-metadata-proxy=astara_router.metadata_proxy:main
    akanda-gratuitous-arp=astara_router.drivers.arp:send_gratuitous_arp
    astara-configure-management=astara_router.commands.management:configure_management
    astara-api-dev-server=astara_router.api.server:main
    astara-metadata-proxy=astara_router.metadata_proxy:main
    astara-gratuitous-arp=astara_router.drivers.arp:send_gratuitous_arp

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
where = test
verbosity = 2
detailed-errors = 1
cover-package = astara_router
